Profile picture source update

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
     <div class="pPicture">
       <img id="profilePicture"
-        src="https://lh3.googleusercontent.com/OXhxzE4B0IaLQg22LkvYefqLqKbHzQ0ADpI2WtKKoHGjK4aBfZpldn2gIZExtUMAUt-O8pBwcVc9lZp3mMgrSYyWUuq3LYa8p-qXTde1o_GBJwrfM-2eVw9_RO1s0euRnP9HVC0sLlB4na1YOZvWdnceX3iZ8aN2FRjry84Qa0rs1nd0kJhD-K2SPaF8FE_Hl5hTcTI3OqGNKIwxCfHmLP2K64PlRL-CFAG4w6sjF6MztkSOxLJRguhQW0b-EpQRTQY8x4uyL3DpH6wspkqPj-to9Rkfwxp-zp6_8rZ9EpB6f6zdHo9Z12k997FUv_w57CPk4b0STdCfOU7KrNWpFBoktz2Y2MGmkxWpEqdgeVIPxuQB3x14TajaI8qMT7C4IM4muflh30VPJppOlGm_yPk37bW9LgZ7orYBH6u_hd0FUIIYt0HVzDm3Ww97N-5SGblFE5K8Mk4-QIrdHfCfTXSkVHMB4FNJoQmlwnkg5l20BLddhdhajSv5tChMWQXmwsPFddHM7Qu_oGUrYxEbU4xG3aCTfwS7XG51fKlfXLMPtKY0N2heTNnanQNkiOlAoNS-VGxyapmxDYOjT2hSDnA_ZV2W7eWTcdJOYjAry6PFIe8qqZzvJS-0z3d75c4zYkwe8HT91pEu9upIK5_ksXhdgsWJlWvupmaZKUWeJOfitRZKhxwVgVJmk_mO5EHHcpP1tJQkpp4nfl4ZtZRSABS55gY9L1CqEusIWkiPByS11smQcaUJG_-8t4ZKEAseql_MG9BMA_I4pY9JI_j1bZiIb6mQXfGaiEWFR2AGqk5O7rdTruEXdhVCT4SyvFxxi2Cv7pZPn7UIgZeMbftRlo74Fo0ysyshNLIRVG3f3cXxcespPkXDyihWL5UsRAlgejS_o1J_duwhZktpx0tay5CESAeHv9iDLh3Iij9ppA=w816-h880-no?authuser=0"
+        src="Photo\Profile Picture.jpg"
         alt="Profile Picture">
     </div>
 
